--- a/css/style.css
+++ b/css/style.css
@@ -45,11 +45,7 @@ ul li {
 .container nav ul li .last_link {
 	color: #fff;
 	background: rgba(55,177,248,1);
-	background: -moz-linear-gradient(top, rgba(55,177,248,1) 0%, rgba(251,166,225,1) 0%, rgba(32,135,232,1) 100%);
 	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(55,177,248,1)), color-stop(0%, rgba(251,166,225,1)), color-stop(100%, rgba(32,135,232,1)));
-	background: -webkit-linear-gradient(top, rgba(55,177,248,1) 0%, rgba(251,166,225,1) 0%, rgba(32,135,232,1) 100%);
-	background: -o-linear-gradient(top, rgba(55,177,248,1) 0%, rgba(251,166,225,1) 0%, rgba(32,135,232,1) 100%);
-	background: -ms-linear-gradient(top, rgba(55,177,248,1) 0%, rgba(251,166,225,1) 0%, rgba(32,135,232,1) 100%);
 	background: linear-gradient(to bottom, rgba(55,177,248,1) 0%, rgba(251,166,225,1) 0%, rgba(32,135,232,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#37b1f8', endColorstr='#2087e8', GradientType=0 );
 	padding: 7px 13px;
@@ -89,11 +85,7 @@ ul li {
 	border-radius: 10px;
 	display: inline-block;
 	background: rgba(108,210,88,1);
-	background: -moz-linear-gradient(top, rgba(108,210,88,1) 0%, rgba(54,175,35,1) 100%);
 	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(108,210,88,1)), color-stop(100%, rgba(54,175,35,1)));
-	background: -webkit-linear-gradient(top, rgba(108,210,88,1) 0%, rgba(54,175,35,1) 100%);
-	background: -o-linear-gradient(top, rgba(108,210,88,1) 0%, rgba(54,175,35,1) 100%);
-	background: -ms-linear-gradient(top, rgba(108,210,88,1) 0%, rgba(54,175,35,1) 100%);
 	background: linear-gradient(to bottom, rgba(108,210,88,1) 0%, rgba(54,175,35,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6cd258', endColorstr='#36af23', GradientType=0 );
 	margin-bottom: 180px;
@@ -108,6 +100,7 @@ ul li {
 	margin: -120px 0 0 0;
 	left: 50%;
 	margin-right: -50%;
+	-webkit-transform: translate(-50%, 0);
 	transform: translate(-50%, 0);
 }
 .visit__places .visit__places_adv {
@@ -161,7 +154,13 @@ footer {
 	font-size: 14px;
 }
 footer p {
-	padding: 10px 0;
+	padding: 20px 0;
+}
+footer .socials {
+  padding-bottom: 20px;
+}
+footer .socials a+a {
+  margin-left: 20px;
 }
 
 
