--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@
 a {
 	text-decoration: none;
 }
+html, body {
+  height: 100%;
+}
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 ul {
 	list-style-type: none;
 	display: flex;
@@ -60,6 +68,7 @@ ul li {
 .main_section {
 	text-align: center;
 	background: url(../img/background.jpg) no-repeat center top / cover;
+  flex: 1 1 auto;
 }
 .main_section h1 {
 	padding-top: 165px;
@@ -126,6 +135,7 @@ ul li {
 .secondary_section {
 	text-align: center;
 	background: #ececec;
+  flex: 1 1 auto;
 }
 .secondary_section h3 {
 	font-size: 26px;
@@ -220,4 +230,10 @@ footer .socials a+a {
 		padding-left: 0;
 		padding-bottom: 20px;
 	}
+  .main_section h1 {
+    font-size: 30px;
+  }
+  .main_section h1 span {
+    font-size: 28px;
+  }
 }
